# tree-sitter-visualforce

./: .gitignore  .prettierignore  .visualforce-corpus.example.json  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  THIRD_PARTY_NOTICES.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-visualforce.pc.in
bindings/c/tree_sitter/: tree-sitter-visualforce.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_visualforce/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVisualforceTests/: TreeSitterVisualforceTests.swift
docs/superpowers/plans/: 2026-07-10-visualforce-grammar.md
docs/superpowers/specs/: 2026-07-10-visualforce-grammar-design.md
queries/: folds.scm  highlights.scm  indents.scm  injections.scm
scripts/: check-fixtures.sh  check-metadata.mjs  check-queries.sh  e2e-clean-clone.sh  test-real-world-corpus.mjs
src/: grammar.json  node-types.json  parser.c  scanner.c  tag.h
test/: real-world-harness.test.mjs
test/corpus/: attributes.txt  embedded.txt  expressions.txt  markup.txt  recovery.txt
test/fixtures/real-world/: config.json
test/fixtures/recovery/: incomplete.page  malformed.page
test/fixtures/valid/: component.component  embedded.page  representative.page  simple.page
test/queries/: footer.scm
(+2 files in other folders)
