[package]
name = "tree-sitter-visualforce"
description = "Salesforce Visualforce grammar for Tree-sitter"
version = "0.1.0"
authors = ["Adam Stepanek <Damecek@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "visualforce"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/damecek/tree-sitter-visualforce"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.10"
